# OrdersManagment

./: CMakeLists.txt  README.md  run_tests.bat
.github/workflows/: analyze_codebase.yml
data/: customers.txt  products.txt  users.txt
include/managers/: CustomerManager.h  OrderManager.h  ProductManager.h  UserManager.h
include/models/: Customer.h  Order.h  Product.h  User.h
include/ui/: ConsoleUI.h
include/utils/: Database.h  Logger.h  Utils.h
src/: main.cpp
src/managers/: CustomerManager.cpp  OrderManager.cpp  ProductManager.cpp  UserManager.cpp
src/models/: Customer.cpp  Order.cpp  Product.cpp  User.cpp
src/ui/: ConsoleUI.cpp
src/utils/: Database.cpp  Logger.cpp  Utils.cpp
tests/: README.md  test_customer.cpp  test_customer_manager.cpp  test_database.cpp  test_main.cpp  test_order.cpp  test_order_manager.cpp  test_product.cpp  test_product_manager.cpp  test_user.cpp
